src/objects/Team__c.object
<CustomObject>
    <fields>
        <fullName>Active1__c</fullName>
        <description>Active field on the Team object should be populated with ‘Yes’ if the Effective Date is less than or equal to the current date, and the End Date is NULL, or the End Date is greater than or equal to today. It should be populated with ‘No’ if the Effective Date is less than the current date and the End Date is ‘Null”, or if the End Date is less than the current date.</description>
        <formula>IF (OR(AND(Effective_Date__c &lt;= TODAY(),ISNULL(End_Date__c)),AND(Effective_Date__c &lt;= TODAY(),End_Date__c &gt;= today() )) ,&quot;Yes&quot;, 
IF(OR(AND(Effective_Date__c &gt; TODAY(),ISNULL(End_Date__c)),(End_Date__c &lt; today()),AND(Effective_Date__c &gt; TODAY(),End_Date__c &gt; today())),&quot;No&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_for_Team_Assignments__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, this Team can be associated with Team Assignments.</description>
        <label>Available for Team Assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_No_Longer_in_Use__c</fullName>
        <label>Reason No Longer in Use</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Unit__r.Region__r.Region__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TeamName__c</fullName>
        <label>Team Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Created_By__c</fullName>
        <formula>CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <formula>Unit__r.Unit_Name__c &amp; &quot; &quot; &amp;   TEXT(Team_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Number__c</fullName>
        <label>Team Number</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Terminated_By__c</fullName>
        <label>Team Terminated By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Type__c</fullName>
        <label>Team Type</label>
        <picklist>
            <picklistValues>
                <fullName>Firefighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Composite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Cross</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Name__c</fullName>
        <formula>Unit__r.Unit_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Record ID</label>
        <referenceTo>Unit__c</referenceTo>
        <relationshipLabel>Teams</relationshipLabel>
        <relationshipName>Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Team Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Effective_date_must_be_greater</fullName>
        <active>true</active>
        <description>Effective date must be greater or equal to effective date on Unit</description>
        <errorConditionFormula>Effective_Date__c &lt;  Unit__r.Effective_Date__c</errorConditionFormula>
        <errorDisplayField>Effective_Date__c</errorDisplayField>
        <errorMessage>Effective date must be greater or equal to effective date on Unit</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &gt;  Unit__r.End_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date must be less than or equal to the End Date on the parent Unit record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_greater_then_Effective_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Effective_Date__c &gt;=  End_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End date must be after the Effective Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_No_Longer_in_Use</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISBLANK(  End_Date__c  )),
ISBLANK(  Reason_No_Longer_in_Use__c  ))</errorConditionFormula>
        <errorDisplayField>Reason_No_Longer_in_Use__c</errorDisplayField>
        <errorMessage>required if &quot;end date&quot; is entered</errorMessage>
    </validationRules>
</CustomObject>